--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ leptos = { version = "0.4.6", features = ["csr", "nightly"] }
 log = "0.4.19"
 reqwasm = "0.5.0"
 serde = "1.0.175"
+serde_derive = "1.0.175"
 serde_json = "1.0.103"
 thiserror = "1.0.44"
 wasm-bindgen = "0.2.87"
