--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
+futures = "0.3.28"
 js-sys = "0.3.64"
 leptos = { version = "0.4.6", features = ["csr", "nightly"] }
 log = "0.4.19"
